Fix visual bugs with nav behind hero

--- a/src/app/components/nav/nav.component.sass
+++ b/src/app/components/nav/nav.component.sass
@@ -7,6 +7,9 @@
   justify-content: space-between
   align-items: center
   padding: 20px
+  position: fixed
+  left: 0
+  right: 0
 
 .nav__links
   position: fixed
@@ -48,8 +51,8 @@
     
   .nav
     flex-direction: row-reverse
-    position: fixed
     left: 50%
+    right: auto
     transform: translateX(-50%)
 
   .nav__links
